[gd_scene load_steps=3 format=3 uid="uid://fm5oxn8830ds"]

[ext_resource type="Script" uid="uid://dxls3qg2oefk3" path="res://scripts/upgrade_panel.gd" id="1_r60ue"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdmev"]
bg_color = Color(0.08627451, 0.12941177, 0.24313726, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.8509804, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="UpgradePanel" type="CanvasLayer"]
script = ExtResource("1_r60ue")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradeWindow" type="PanelContainer" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cdmev")

[node name="MarginContainer" type="MarginContainer" parent="Overlay/CenterContainer/UpgradeWindow"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8509804, 1, 1)
theme_override_font_sizes/font_size = 26
text = "UPGRADE HEROES"

[node name="CloseButton" type="Button" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "X"

[node name="HSeparator" type="HSeparator" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="UpgradeList" type="VBoxContainer" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Overlay/CenterContainer/UpgradeWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
